language/tests/error/UndefinedFunction02.sl
toemintoinvoke(f) {
  f("hello");
}

toemintof1() {
  tulostappa("f1");
}

toeminto piä() {
  invoke(f1);
  invoke(foo);  
}  
